--- a/Syllabus/Syllabus.Rmd
+++ b/Syllabus/Syllabus.Rmd
@@ -1,78 +1,91 @@
 ---
-title: 'GY304(W): Stratigraphy'
-date: "Spring 2022"
+title: 'SOCI 301: Contemporary Social Theory'
+date: "Fall 2022"
+link-citations: yes
 output:
   pdf_document:
     keep_tex: yes
     fig_caption: yes
+    number_sections: yes
     latex_engine: pdflatex
     template: Syllabus_template.tex
   html_document:
     df_print: paged
 geometry: margin=1in
-
-#Fill this in with any number of instructors. It uses a two column layout with a column break after each instructor.
-
 instructor:
-- name: Dr. Benjamin J. Linzmeier
-  email: blinzmeier@southalabama.edu
-  prefered_contact: Canvas LMS messages
-  officehours: 1:00-3:00 p.m. MTuTh
-  office: Life Science Building room 344
-  correspondence_policy: Within 24 hours on weekdays; 48 hours on weekends
+- name: Dr. Martín Jacinto
+  email: mjacinto@csuchico.edu
+  prefered_contact: Blackboard Messaging
+  officehours: 10:00 a.m. - 12:00 p.m. Wed
+  office: TBD
+  correspondence_policy: Respond within 24-48 hours
   instructor:
-
-# You can include multiple entries for a teaching assistant by filling in all these options below. Currently this is set to populate two columns on the syllabus but there is not an even column break inserted.
-
+    
 # teachingassistant:
 #  - name: Filler
 #    email: filler@fill.com
 #    officehours: W T
 #    office: OfficeNumber
 #    sections: '301'
-   
-classroom: 'LCSB 337'
-classhours: 11:15 am - 12:05 pm	MW
-labroom: 'LCSB 337'
-labhours: 1:25 pm - 3:55 pm	W
+
+classroom: 'Butte Hall 308'
+classhours: 2:00 pm - 3:15 pm	TuTh
 fontfamily: mathpazo
 fontsize: 11pt
 header-includes: \linespread{1.05}
+  -\usepackage{float}
+  -\usepackage{booktabs}
+ 
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, ache=F, message=F, warning=F, results="hide"}
+
 knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(cache=TRUE)
+knitr::opts_chunk$set(fig.path='figs/')
+knitr::opts_chunk$set(cache.path='_cache/')
+knitr::opts_chunk$set(warning=F, message=F)
+
 library(timeDate)
 library(tibble)
 library(dplyr)
 library(knitr)
+library(RefManageR)
+library(knitcitations)
+library(rcrossref)
+library(bibtex)
+library(kableExtra)
+
+bib <- ReadBib("bib_main.bib")
+myopts <- BibOptions(bib.style = "authoryear", style="latex", first.inits=FALSE, max.names = 20)
+
 
 #This code chunk sets up a table of meeting days for the course.
 #You can set days of the week for course meetings (e.g. Monday and Wednesday).
 #Semester start and end dates are selected and then university holidays like spring break are specified.
 
 #Days of the week that the course meets. Must be full day name in quotes.
-Days <- c("Monday", "Wednesday")
+Days <- c("Tuesday", "Thursday")
 
 #Semester start date for classes as YYYY/M/D.
-SemesterStart <- as.Date("2022/1/10")
+SemesterStart <- as.Date("2022/8/22")
 
 #Semester end date for classes as YYYY/M/D.
-SemesterEnd <- as.Date("2022/4/29")
+SemesterEnd <- as.Date("2022/12/09")
 
 #Fall break start and stop date.
 FallBreak <-
   seq.Date(
-    from = as.Date("2021/10/7"),
-    to = as.Date("2021/10/10"),
+    from = as.Date("2022/11/21"),
+    to = as.Date("2022/11/25"),
     by = "day"
   )
 
 #Spring break start and stop date.
 SpringBreak <-
   seq.Date(
-    from = as.Date("2022/02/28"),
-    to = as.Date("2022/03/06"),
+    from = as.Date("2023/03/13"),
+    to = as.Date("2023/03/17"),
     by = "day"
   )
 
@@ -89,12 +102,13 @@ DayBeforeThnks<-as.Date(holiday(
 Holidays <-
   c(as.Date(holiday(
     year = getRmetricsOptions("currentYear"),
-    Holiday = c("USLaborDay", "USThanksgivingDay", "USMLKingsBirthday")
+    Holiday = c("USLaborDay", "USVeteransDay","USThanksgivingDay", "USMLKingsBirthday")
   )), SpringBreak, FallBreak, DayBeforeThnks)
+Holidays
 
 #Create a list of semester days excluding holidays.
 SemesterDays <- SemesterDays[!SemesterDays %in% Holidays]
-
+SemesterDays
 #Make dataframe with all semester days.
 ClassDays <- data.frame(index = 1:length(SemesterDays))
 
@@ -123,261 +137,200 @@ MeetingDays <- bind_cols(MeetingDays, Lecture = Lecture_Topic)
 
 #### Grade table ####
 Grades <- tribble( ~ Grade,
-                   ~ Range,
+                   ~ Range, ~Quality,
                    "A",
-                   "90-100",
+                   "93 - 100%", "Excellent Work",
+                   "A-",
+                   "90 - 92%", "Nearly Excellent Work",
+                   "B+",
+                   "87 - 89%", "Very Good Work", 
                    "B",
-                   "80-89",
+                   "83 - 86%", "Good Work",
+                   "B-",
+                   "80 - 82%", "Mostly Good Work",
+                   "C+",
+                   "77 - 79%", "Above Average Work",
                    "C",
-                   "70-79",
+                   "73 - 76%", "Average Work",
+                   "C-",
+                   "70 - 72%", "Mostly Average Work",
+                   "D+",
+                   "67 - 69%", "Below Average Work",
                    "D",
-                   "60-69",
+                   "60 - 66%", "Poor Work",
                    "F",
-                   "< 60")
+                   "< 60%", "Failing Work")
 
 ####Assignment weight table####
-Weights <- tribble(
-                    ~ Item,
+Weights <- tribble(~ Item,
                     ~ Weight,
-                    "Writing scaffolding",
-                    "20 %",
-                    "Semester Project",
-                    "25 %",
-                    "Labratory Assignments",
-                    "20 %",
-                    "Midterm Exam",
+                    "Attendance & Participation",
                     "15 %",
-                    "Final Exam",
-                    "20 %"
+                    "Weekly Perusall Participation & Discussion",
+                    "15 %",
+                    "Quizzes", 
+                    "15 %",
+                    "Three (3) Writing Assignments",
+                    "25 %", 
+                    "Final Paper",
+                    "30 %", 
+                    "TOTAL", 
+                    "100 %"
                   )
 
 
 ```
 
-# Course description
+# Course Description
 
-Why does Sedimentology (GY306[W]) matter? Sediments house the record of climate at Earth's surface, influence climate through feedbacks, and house important resources. In this course you will learn how sediments are formed, moved, and preserved in the rock record. We will discuss the way that paleoenvironments are interpreted from observations of rocks on multiple scales. In addition, we will work together to improve your writing skills with a focus on the genres of writing you may be expected to do as professional geologists.
+We all construct and use social theories in our everyday lives. Theory is simply a means of understanding and explaining the social world around us. Social theory allows for seeing patterns, forces, and power relations, encouraging us to make sense of all kinds of social phenomena – ranging from everyday interactions between friends to decades of violent colonization. In this course, we will read theoretical texts every week, and then we will spend time understanding how they have been used to understand specific social phenomena. Theory must be relevant to real life “social facts” for it to survive, and we will work toward bridging the abstract concepts in our readings with the world around us. By the end of the class, you will likely find that some theories are your favorites – more relevant to your everyday life and your own sociological interests than others.
 
-# Writing requirements
+The goal of this course is to deepen your understanding of sociological theories that motivate research and inquiry into our society. In this class, we explore the diversity of major theoretical orientations in sociological thought since the 1950s. Throughout the course of the semester, we will compare core concepts and ideas from these theorists on topics such as social interaction, identity, domination, freedom and perhaps most importantly, power. 
 
-For this class to fulfill the (W) requirements of USA, you will be doing a semester-long research project in an area related to sedimentology. To build your skills in discipline-specific writing, we will be doing smaller writing assignments throughout the semester. The final projects will be peer-reviewed, revised, and then submitted for final grading and assessment.
+This course requires you to read a lot of social theory, which will be abstract and difficult. I assign primary texts, meaning that they were written by the theorist him/herself. The textbook supplements primary texts by elaborating important notions and concepts across the multipe theoretical perspectives we will cover in the course. While we will contextualize the readings by learning about the theorist’s life, it is important that you learn to read with patience and diligence. I am here to help, as are your classmates. If you are struggling to understand course material on your own, that’s okay! No sociologist learns theory on their own. In this class we situate the readings within their historical and biographical contexts and in conversation with other readings. Through lectures, multiple readings of the material on your own, and class discussions, we will – together – arrive at a deeper understanding of our social world and of the history of sociological thought. 
 
-# Important Dates
-January 17th - Last day to drop without WD\
-April 1st - Last day to drop or withdraw\
-See the [Academic Calendar](https://www.southalabama.edu/academiccalendar/) for more information.
+# Learning Objectives
 
-\newpage
+## Course Learning Objectives
+- Gain knowledge about some of the primary theoretical perspectives used within sociology in the 20th and 21st centuries.
+- Understand how these perspectives have been shaped by the social context in which they arose. 
+- Explore how these perspectives have impacted sociological research and knowledge. 
+- Evaluate the strengths and weaknesses of each perspective. 
+- Apply the perspectives to our real lives and to the world around us. 
 
-# Course goals
+## Sociology Program Student Learning Objectives 
+- Demonstrate critical thinking through verbal and written communication. 
+- Apply, critically interpret, and synthesize sociological theory. 
+- Display an understanding of and appreciation for cultural diversity. 
+- Identify processes of social control and how they shape our social institutions and lives. 
+- Recognize the relationship between personal agency, social responsibility, and social change (sociological imagination). 
+- Display knowledge of the impact of social institutions on everyday lives.
 
-1.  Observe, describe, classify, and communicate characteristics of sediments and sedimentary rocks.
+## Course Status
+This course is a requirement for the sociology major.It has a prerequisite of SOCI 300, Classical Social Theory, though this prerequisite may be waived with permission of the instructor. *Note that if you take SOCI 301 prior to or concurrent with SOCI 300, you will not be able to repeat SOCI 300 for forgiveness.*
 
-2.  Develop a framework for building hypotheses about the distributions of sediments, sedimentary structures, and sedimentary environments.
+## Important Dates
+Sept. 2nd - Last day to drop without instructor's approval\
+Oct. 24th - Last day to drop and receive financial credit for refund\
+Nov. 10th - Last day to drop or withdraw\
+See the [2022-2023 Academic Calendar](https://www.csuchico.edu/apss/calendar/aca-cal-2022-23.shtml) for more information.
 
-3.  Communicate sedimentary geology to a variety of audiences using different genres of writing.
+# Course Readings
 
-4.  Read and summarize scientific papers focused on sedimentary geology and related fields.
+## Required Textbooks
 
-# Class textbooks
+```{r new, echo = FALSE, results="asis"} 
 
-There is no required textbook for this fall, however I recommend getting these books from the library or used versions to compliment the lectures. Without a required textbook I will also be assigning technical papers to read throughout the semester. We will discuss these and you will build your technical reading skills along with your writing skills.
+bib["dillon2010twp"]
 
-### For general Sedimentology and Stratigraphy
-Gary Nichols, __Sedimentology and Stratigraphy__, 2nd edition, Wiley-Blackwell, ISBN: 978-1-405-13592-4
+``` 
 
-### Field focused rock ID
-Dorrik A.V. Stow, __Sedimentary Rocks in the Field: A Colour Guide__, Manson Publishing Ltd, ISBN 10: 1874545693
+- We will be using the 3rd edition which looks [this](https://www.abebooks.com/Introduction-Sociological-Theory-Theorists-Concepts-Applicability/31208296728/bd?cm_mmc=ggl-_-US_Shopp_Textbook-_-product_id=COM9781119410911USED-_-keyword=&gclid=Cj0KCQjwuO6WBhDLARIsAIdeyDLJvr2N_LKW1qd-49HuMemlLuCRQT4yR3PKWnmeqMDWBDwy9LNFFRUaAlcyEALw_wcB). Previous editions are not permitted. 
 
-### Improve the mechanics of your writing
-William Strunk JR. and E.B. White, __The Elements of Style__, ISBN: 1594200696
+## Additional Required Readings
 
-### Lectures and papers
-Both lecture slides and papers will be available via Canvas. Slides will be posted after lectures and assigned papers will be available in Canvas.
+-  Primary texts and other required readings will be available electronically on the Blackboard Learn course page and on Perusall.
 
+# Structure and Character of a ChicoFlex Course 
 
-\newpage
+-  **Since this is a [*ChicoFlex* Course](https://www.csuchico.edu/tlp/chicoflex/faq.shtml#whatiscoflex), ALL communications for this course will be conducted via Blackboard Learn**. At Chico State, “this class meets at set days/times in-person (requiring social distancing and face coverings) and is paired with another section taught simultaneously online by the same instructor.” This means that this class includes campus students who come to a physical class, online students who show up “live,” and online students who watch the archived lectures. Therefore, it is the student’s responsibility to check Blackboard Learn regularly and to check in with the professor or review the Syllabus re: any administrative questions. *Students are required to email the instructor from Blackboard Learn (this will ensure instructor access to emails).*
 
-```{r Schedule, echo=FALSE}
-kable(MeetingDays[,c("Date",
-                     "Class",
-                     "Week",
-                     "Lecture")
-                     ],
-  caption = "Course Schedule.",
-  align = c("l",
-            "c",
-            "c",
-            "l")
-)
+-  Also, given the fact that we’re still in a global pandemic, the course will proceed fluidly. I want this class to work for all of us and will remain sensitive to the ongoing needs of students while adhering to public health standards and guidelines. 
+
+## Technological Problems: 
+
+- Occasional problems with technology are a common part of the modern university experience. If you have any technical difficulties, you **should call the university technology folks at 530-898-6000**. After you call them, if they are not able to resolve the issue, please email me with a description of the problem, the name of the person you spoke to in that office, what they and/or you are doing to resolve the problem, and the expected timeline for its resolution. If you are having trouble with Blackboard Learn during a quiz or other assignment, take a screen shot or photo of the computer screen and the error message you receive and email it to me AND contact ITSS at 530-898-6000. If you experience technical difficulties while submitting an assignment, call ITSS at 1-800-898-6000 and send a copy of the assignment to me via Blackboard Learn. If any of these things happen when ITSS is closed, please follow up with them immediately the next business day. You MUST contact ITSS to resolve the issue if you are asking for any kind of leniency or extension. 
+
+```{r covid-19 policy, child='general_components/COVID_policy.md'}
+
 ```
 
-\newpage
+```{r attendance_policy, child='general_components/attendance_policy.md'}
 
-# Student conduct
+```
 
-## Attendance policy
+# Determination of Final Grade
+At the university level, it is a great achievement to earn the grade of A. It is especially worthwhile to earn an A as an overall final course grade. The grade of A is the highest recognition and commendation there is at the university classroom level. Its use in this course will be in that spirit, consistent with the traditional meaning of “excellence.” At the same time, I wish to make it perfectly clear that **your grades in this class are NOT an evaluation of you as a person.** For people on both ends of the grading scale, it is sometimes necessary to remember that you are more than just your grades. 
 
--   Students who complete less than 50% of assignments/exams will be assigned a failing (F) grade.
+Table \ref{tab:grade_scale} displays the grading scale that is used to determine a letter grade.
 
--   Review the 'Attendance and Absences Policy', in the Undergraduate and Graduate Bulletin for attendance and absences policy
+\renewcommand{\arraystretch}{1.5}
 
-## Grading
+```{r Grades_Table, echo=FALSE, results='asis'}
 
-### Late policy
-I will be grading assignments in batches to provide fair assessment to everyone. This means late work can be disruptive. The penalty for late work will be 20% a day after the first 24 hours late. If you have a reasonable excuse (illness, etc.) the late policy may be relaxed.
-
-### Extra credit
-Extra credit may be made available throughout the semester at my discretion.
-
-Assignments will be returned within a week of submission.
-
-```{r Grades_Table, echo=FALSE}
 kable(Grades,
-      align = c("l", "r"))
+      align = c("l", "c", "l"),format="latex",  
+      label="grade_scale", caption="Grading Scale") %>%
+  kable_styling(font_size=10, latex_options = "hold_position", full_width = F) %>%
+  row_spec(0, bold=T) 
+
 ```
 
-Assignment weighting will follow:
-```{r Weights_Table, echo=FALSE}
+Table \ref{tab:weight_table} displays how your final grade will be weighed according to the following components:
+
+\renewcommand{\arraystretch}{1.5}
+
+```{r Weights_Table, echo=FALSE, results='asis'}
 kable(Weights,
-      align = c("l", "r"))
-```
-
-\newpage
-# Writing tasks
-## Scaffolding tasks
-Scaffolding writing tasks assigned to give you some practice and general feedback to improve your writing.
-### Abstract 1
-
-First attempt at writing an abstract using the Nature paragraph template.
-
-### Figure Caption
-
-Write the figure captions for several example figures using some literature examples. Learn to describe figures in text.
-
-### Abstract 2
-
-Write the abstract for a second paper using the feedback from the first abstract to improve your process.
-
-### Peer Review
-
-Peer review of preprint or publication using example template. The goal of this assignment is to focus on critiquing the logic put forward in the paper with suggestions for refining it.
-
-
-## Semester project
-Semester project outline of writing products.
-
-### Project abstract
-
-Short outline of full project highlighting the hypotheses to test, data to collect, and impact of the project. This includes no figures but could include a small table for organizing hypotheses.
-
-### Project first draft
-
-Full proposal draft with figures. The important aspect of this submission is assessment of the research plan and justification.
-
-### Project peer review
-
-Review of a peer's proposal with the goal of improving the work by increasing clarity, readability and communication.
-
-### Project final draft
-
-Full, final project proposal with figures, time line and clear plan for work. Focus is on clearly communicating to your peers that the work is worth doing and that you can do it.
-
-### Project presentation
-
-Presentation of a peer's research proposal with a focus on justifying funding their project. The goal is to convince the audience that the project can be done and will have an important impact on society.
-
-
-\newpage
-<!-- The sections of code below that include "child=..." are drawing from seperate .md documents. These allow for updating text in a single spot for use in multiple syllabus documents. -->
-```{r Academic disruption, child='general_components/academic_disruption.md'}
+      align = c("l", "c"), format="latex", booktabs=T, 
+      col.names = c("Item", "% of Final Grade"), 
+      label="weight_table", caption="Course Requirements and Grading Policy") %>%
+  kable_styling(font_size=10, latex_options = c("hold_position"), full_width = F) %>%
+  row_spec(0, bold=T) %>%
+  row_spec(6, bold=T, hline_after = T)
 
 ```
 
-```{r Academic honesty, child='general_components/academic_honesty.md'}
+**Note regarding class workload:** This is a three (3) credit hour class. You should expect to spend two hours outside of class for every one hour in class. This time outside of class will be spent on reading, assignments, and studying. This means you should plan on devoting six hours of outside time per week to this course.     
+
+\newpage
+
+## Attendance and Class Participation (15% of Final Grade)
+
+The format of this course is an interactive, “live” hybrid lecture and discussion with the objective of collaborative learning and analysis. Participation in class discussion is necessary for your development as a critical scholar and for your understanding of the course material. This is a **required** course with difficult reading material and, therefore, it is crucial to establish an informed and critical discourse with each other over the material. Participation includes contributions to class discussions either in class or via class assignments. Participation also includes actively listening, as well as sharing your ideas, criticisms, and frustrations with course material. To ensure active participation, students must come to class having read and taken notes on all material. Furthermore, you are expected to contribute to discussions either in class or via class assignments. Grading of all work is done with the expectation that attendance and participation will be rewarded in the final grade. Also, see “COVID Directions” (above) if you are symptomatic and an in-class student. 
+
+In addition to completing all of the assigned reading before each designated day of the week (see reading schedule below and make sure you attend class for the ongoing reading deadlines), you must critically reflect on what is interesting/troubling/useful about what you have read. You are expected to do this work on your own. Be prepared to offer your questions, insights, and critique either via communication with me, writing assignments and/or in conversation with other students. 
+
+*These are questions you should consider as you complete each reading:* What are the authors’ main objectives/research questions?  What methods, if any, did the author use to explore this question? What are the author’s main conclusions?  How do the readings build upon or challenge other works we have read thus far? Answering these questions on your own will better prepare you for quizzes, writing assignments, and the final project.
+
+**REMEMBER! Attendance is mandatory in all sociology classes (see [Attendance Policy section](#attendance) above). It is also crucial to doing well in this class. In the context of this class, attendance means COMPLETING ALL OF THE ASSIGNMENTS, QUIZZES, INDIVIDUAL WORK, etc.** *I usually have a very strict attendance policy.* 
+
+```{r perusall_participation, child='general_components/perusall_participation.md'}
 
 ```
 
-## Course and Teacher evaluation
-Student input for the purpose of course improvement is taken very seriously and will potentially be done periodically. Please take the time to evaluate this course and the instructor, especially at the end of the semester. Evaluations will in no way affect your grade.
+## Quizzes (15% of Final Grade)
+Throughout the course, I will ask students to synthesize, analyze, and/or apply contemporary social theories and readings from the previous day(s) or week(s) via a fairly short, intense quiz (typically, 3-10 multiple-choice and/or short answer questions). The quiz closes after the posted due date. In order to avoid missing a quiz and any announcements I have, make sure you check Blackboard Learn every single day of the week. The quiz closes after the posted due date. In order to avoid missing a quiz and any announcements I have, make sure you check Blackboard Learn every single day of the week. *No quiz will be assigned the week a writing assignment is due.*
 
-\newpage
-# Safety
+## Three (3) Writing Assignments (25% of Final Grade) {#writing_assignments}
+Students will complete at least 3 small writing assignments throughout the course. These assignments will assess knowledge of the course material, critical thinking skills, and writing skills. Guidelines for the papers will be given out at least two weeks in advance. Papers will have a word limit, approx. 750 words (roughly 3 double-spaced pages), typed, 12-point font, 1-inch margins, Times New Roman (11-point Arial font is also appropriate). Proper grammar and APA citation of sources is expected. **No other format will be accepted.** Late papers will be deducted 20% of its overall grade each day that it is overdue. 
 
-## Field Safety
+## Final Paper (30% of Final Grade)
+Building upon the ideas you developed in the writing assignments and other assignments, you will write a **final 1,000 word (roughly 4 double-spaced pages) paper for this class.** In this paper, you will apply, expand, or challenge theories we covered in class. In this paper, you will apply, expand, or challenge theory. If you apply theory, you will use one of the main theoretical frameworks we covered in the course to sociologically analyze a cultural artifact (examples: documentary film(s), popular film(s), popular music, magazines, novels, etc.; speak with me about the appropriate cultural artifact). If you expand theory, you will make an argument for the expansion of any theory we have covered in the course, thus making that theory better, more contemporary, and/or more inclusive. If you challenge theory, you will accurately describe the theory you are challenging, make an argument for how and why you are challenging the theory, and perhaps offer a new theory that might replace the theory you are challenging. Before you begin your paper, speak with me about your main ideas and outline for the paper. I will post a detailed rubric and example of an excellent Final Paper on Blackboard about a month before the due date. 
 
-### Transportation
-Wear your seatbelts at all times while in moving vehicles. Do not distract the driver.
+### Tips and tricks for good writing
 
-### Location awareness
-Be aware of potential dangers (animals, weather, etc) and avoid them. When in a group, please think about the safety of your peers.
-
-## Building Safety
-
-### Fire
-Random fire safety drills may occur during the course of the term. You will be expected to evacuate the building and assemble at the designated location: outside by the northeast corner of the building (follow your instructor).
-
-### Tornado
-Move away from external windows to the hallway in the basement, first, or second floor. 
-
-### Active Shooter Incident
-"Get Out" of the building as long as they can do so safely. Once you have exited the building and are at a safe location, "Call Out" to law enforcement using 911, USA Police at 460-6312, or press the Emergency button on your LiveSafe Mobile Safety App. If you can't get out, "Shelter in Place" in a secure location that is away from windows and doors, preferably a location that can be locked and barricaded.
-
-\newpage
-# On writing
-
-## Revising written work
-
-Nothing is perfect on the first draft. We all revise and rework our written creations for a variety of reasons. We may not communicate the point we want to get across to all readers. We may have forgotten or not known important pieces of information initially. The tone of the writing may be inappropriate for the audience. Word choice might obscure meaning. The only way we can make our writing better is by revising it based on constructive feedback from others or ourselves.
-
-## Genres of Science writing
-
-### Paper reviews
-
-Critical but constructive critique of unpublished research papers. Informs the journal editor of how the work contributes to existing literature and provides guide to authors and the editor for improvement to the manuscript. Can be signed but often anonymous.
-
-### Descriptive Reports
-
-Descriptive reports are often made for industry or geological surveys. These describe the composition and structure of rocks in an area. Sometimes they include estimations of resource potentials or environmental impacts of industry.
-
-### Research papers
-
-These pieces of science writing typically test one or more closely related hypotheses in the context of existing scientific knowledge. Most have structure that is pre-defined including: abstract, introduction, methods, results, discussion, and conclusion. Figures are an integral part of most papers in the Geosciences and range from images of outcrops to abstracted summaries of observations to plots of measurements.
-
-### Conference abstracts
-
-These are generally a step on the path to a full research publication where results, interpretations, and context are publicly presented for the first time.
-
-### Grant Applications
-
-Scientific work is generally funded with public or private funds that are obtained by writing grants. Unlike research papers, grants must persuade reviewers that the research planned is important, can be done by the applicant, and can be achieved in the time frame of the funding request.
-
-### Science Communication
-
-Scientists also write general summaries of their work for non-specialist audiences. These can be blog posts, or lesson plans that are shared for educators. Some folks also write books for general audiences describing the processes of science.
-
-## Common processes
-
-For writing in the discipline, we focus on several specific questions to guide our composition:
-1) Who is our audience?
-2) What is the one or two sentence take-home point?
-3) How quickly are we communicating the information?
-
-Science writing, like all writing, is socially situated and caries with it the beliefs, values, and ideologies of the particular community and culture.
-
-## Tips and tricks for good writing
-Use a citation management software to organize your papers and create bibiliographies. My preference is [Zotero](https://www.zotero.org/) because it is free, open source, and works across multiple operating systems.
+Use a citation management software to organize your papers and create bibiliographies. My personal preference is [Zotero](https://www.zotero.org/) because it is free, open source, and works across multiple operating systems. For information about other citation management software that is available to CSU Chico students, visit the Meriam Library ["Sample Papers and Citation Tools" page](https://libguides.csuchico.edu/c.php?g=432300&p=2948649). 
 
 Write and then revise. Ask for feedback from peers or wait until you have some distance from your writing and then revise.
 
 Prompt yourself with questions that have short, concrete answers.
 
-\newpage
-# Campus resources
-
-```{r COVID policy, child='general_components/COVID_policy.md'}
+```{r late_work-course_eval, child='general_components/late_work-course_eval.md'}
 
 ```
+
+```{r contacting_professor, child='general_components/contacting_professor.md'}
+
+```
+
+```{r other_course_policies, child='general_components/other_course_policies.md'}
+
+```
+
+\newpage
+
+# Campus resources
 
 ```{r Writing Center, child='general_components/writing_center.md'}
 
@@ -395,12 +348,27 @@ Prompt yourself with questions that have short, concrete answers.
 
 ```
 
-```{r Disaster Plan, child='general_components/disaster_plan.md'}
-
-```
-
 # Final thoughts
 
 This document is a roadmap for our semester. We learn about the Earth together and our individual experiences shape how we interpret and value data. Like all your classes, you will get out what you put into this course. Asking for help from one another and your instructors is important, don't be afraid to ask a question about something you don't know or if you want to check your knowledge about something you think you know.
 
-__If this document is updated, a copy will be supplied to you via Canvas and changes will be announced in class.__
+__If this document is updated, a copy will be supplied to you via Blackboard and changes will be announced in class.__
+
+\newpage 
+
+\renewcommand{\arraystretch}{1.25}
+
+```{r Schedule, echo=FALSE}
+kable(MeetingDays[,c("Date",
+                     "Class",
+                     "Week",
+                     "Lecture")
+                     ],
+  caption = "Course Schedule.",
+  align = c("l",
+            "c",
+            "c",
+            "l")
+)
+```
+
