--- a/Syllabus/Syllabus.tex
+++ b/Syllabus/Syllabus.tex
@@ -130,6 +130,12 @@
 \vspace{2mm}
 
 
+\begin{quote}
+\emph{Please be aware that the land on which our campus resides occupies
+the territory of the Mechoopda people. Without them, we would not have
+access to this campus or our education.}
+\end{quote}
+
 \hypertarget{course-description}{%
 \section{Course Description}\label{course-description}}
 
@@ -396,16 +402,6 @@ they will receive a letter grade based on their performance.
 \section{Determination of Final
 Grade}\label{determination-of-final-grade}}
 
-At the university level, it is a great achievement to earn the grade of
-A. It is especially worthwhile to earn an A as an overall final course
-grade. The grade of A is the highest recognition and commendation there
-is at the university classroom level. Its use in this course will be in
-that spirit, consistent with the traditional meaning of ``excellence.''
-At the same time, I wish to make it perfectly clear that \textbf{your
-grades in this class are NOT an evaluation of you as a person.} For
-people on both ends of the grading scale, it is sometimes necessary to
-remember that you are more than just your grades.
-
 Table \ref{tab:grade_scale} displays the grading scale that is used to
 determine a letter grade.
 
@@ -578,10 +574,10 @@ following four criteria:
   and questions in their group forums.
 \end{enumerate}
 
-? Common question! What if I don't have any questions or comments?
-Elaborate on a specific topic, connect to personal experience or
-perspective, extension to another topic or perspective, paraphrase part
-of the text.
+\textbf{Common Question: What if I don't have any questions or
+comments?} Elaborate on a specific topic, connect to personal experience
+or perspective, extension to another topic or perspective, paraphrase
+part of the text.
 
 \hypertarget{quizzes-15-of-final-grade}{%
 \subsection{Quizzes (15\% of Final
@@ -714,33 +710,173 @@ weekend, expect a reply the following Monday.
 \item
   On-line communication
 
-  \begin{itemize}
-  \tightlist
-  \item
-    I require that all communication be done in a respectful, courteous,
-    and professional manner. When in doubt, always err in these
-    directions; for example, aim for being slightly more courteous than
-    you may think you need to be. Nobody will object to an extra
-    ``please'' or ``thank you.'' Always take a few minutes to read what
-    you have written before posting a comment or sending an email --
-    pause and think -- could what you have written be construed as
-    disrespectful, impolite, or snappy? When in doubt, re-think your
-    words and tone, and re-calibrate your message. We may not always
-    agree but disagreeing while simultaneously showing respect and
-    courtesy toward someone is a skill that will serve you well
-    throughout your life and in many contexts. Always make criticism
-    constructive and not personal. If you disagree with someone, they
-    should not feel personally attacked. Keep the ideas separate from
-    the person. I will always keep these principles in mind when
-    communicating with you -- please do the same toward me and your
-    fellow students.
-  \end{itemize}
+  \begin{quote}
+  I require that all communication be done in a respectful, courteous,
+  and professional manner. When in doubt, always err in these
+  directions; for example, aim for being slightly more courteous than
+  you may think you need to be. Nobody will object to an extra
+  ``please'' or ``thank you.'' Always take a few minutes to read what
+  you have written before posting a comment or sending an email -- pause
+  and think -- could what you have written be construed as
+  disrespectful, impolite, or snappy? When in doubt, re-think your words
+  and tone, and re-calibrate your message. We may not always agree but
+  disagreeing while simultaneously showing respect and courtesy toward
+  someone is a skill that will serve you well throughout your life and
+  in many contexts. Always make criticism constructive and not personal.
+  If you disagree with someone, they should not feel personally
+  attacked. Keep the ideas separate from the person. I will always keep
+  these principles in mind when communicating with you -- please do the
+  same toward me and your fellow students.
+  \end{quote}
 \end{itemize}
 
 \textbf{I reserve the right to penalize individuals who do not
 demonstrate these basic principles in their communications.}
 
-\#Other Course Policies
+\hypertarget{creating-a-safe-and-inclusive-learning-environment}{%
+\section{Creating a Safe and Inclusive Learning
+Environment}\label{creating-a-safe-and-inclusive-learning-environment}}
+
+\hypertarget{mandatory-reporting}{%
+\subsection{Mandatory Reporting}\label{mandatory-reporting}}
+
+As an instructor, one of my responsibilities is to help create a safe
+learning environment on our campus. I also have a mandatory reporting
+responsibility related to my role as an instructor. It is my goal that
+you feel able to share information related to your life experiences in
+classroom discussions, in your written work, and in our one-on-one
+meetings. I will seek to keep information you share private to the
+greatest extent possible. However, I am legally required to share
+information regarding sexual misconduct with the University. Students
+may speak to someone confidentially by contacting the
+\href{https://www.csuchico.edu/counseling/}{Counseling and Wellness
+Center} (530-898-6345) or
+\href{https://www.csuchico.edu/safeplace/}{Safe Place} (530-898-3030).
+Information on campus reporting obligations and other Title IX related
+resources are available here: www.csuchico.edu/title-ix
+
+\hypertarget{statement-of-inclusive}{%
+\subsection{Statement of Inclusive}\label{statement-of-inclusive}}
+
+Education is transformative, and open intellectual inquiry is the
+foundation of a university education and a democratic society. In the
+spirit of shared humanity and concern for our community and world, the
+Department of Sociology faculty celebrate diversity as central to our
+mission and affirm our solidarity with those individuals and groups most
+at risk. In line with our departmental goals, we disavow all racism,
+xenophobia, homophobia, sexism, Islamophobia, anti-Semitism, classism,
+ableism, and hate speech or actions that attempt to silence, threaten,
+and degrade others.
+
+As educators, we affirm that language and texts, films and stories help
+us to understand the experiences of others whose lives are different
+from ours. We value critical reasoning, evidence-based arguments,
+self-reflection, and the imagination. Building on these capacities, we
+hope to inspire empathy, social and environmental justice, and an
+ethical framework for our actions. We advocate for a diverse campus,
+community, and nation inclusive of racial minorities, women, immigrants,
+the LGBTQ+ community, and people of all religious faiths.
+
+\hypertarget{statement-of-respect-for-diversity-in-learning-styles-perspectives-and-backgrounds}{%
+\subsection{Statement of Respect for Diversity in Learning Styles,
+Perspectives, and
+Backgrounds}\label{statement-of-respect-for-diversity-in-learning-styles-perspectives-and-backgrounds}}
+
+Each of us arrives in the classroom with a multitude of life
+experiences, and we all learn in different ways. In designing this
+class, my intent has been to provide many different methods to practice
+and learn to support these different learning styles. In addition, while
+learning statistics, we will use a variety of examples for our data.
+Some examples will be simple and often use `made-up' data, while others
+deal with real data and statistics about important social issues. It is
+my hope that all materials in the class are respectful to people from
+all backgrounds including diversity in sex/gender, sexuality,
+disability, age, socioeconomic status, ethnicity/race, immigration
+status, veteran status, religion, and culture. I invite your feedback on
+this, and your suggestions are always welcome.
+
+\hypertarget{undocumented-daca-or-ab-540-immigrant-students}{%
+\subsection{Undocumented, DACA, or AB-540 Immigrant
+Students}\label{undocumented-daca-or-ab-540-immigrant-students}}
+
+As an educator, I strive to make courses accessible to all students
+regardless of immigration status. If your status presents obstacles to
+engaging in specific activities or fulfilling specific criteria, you may
+request confidential accommodations. You may consult with the
+\href{https://www.csuchico.edu/diversity/}{Office of Equity and
+Diversity} or the \href{https://www.csuchico.edu/dreamcenter/}{Dream
+Center} for examples of possible accommodations. Such arrangements will
+not jeopardize your student status, your financial aid, or any other
+part of your residence. Please advise me if and when you feel
+comfortable during the semester so that I may make appropriate
+alterations as needed.
+
+\textbf{Note:} For all students addressing undocumented immigration as a
+category of analysis in class, do not use the word ``illegal(s)'' in a
+discussion. The term ``illegal(s)'' promotes a culture of intolerance
+and violence toward foreign nationals and undocumented immigrants. A
+more accurate and non-offensive term is ``undocumented immigrant(s).''
+The use of this language signifies respect to the population addressed
+and reflects our campus's most basic values of diversity and civility in
+academic discourse.
+
+\hypertarget{statement-on-eliminating-anti-blackness}{%
+\subsection{Statement on Eliminating
+Anti-Blackness}\label{statement-on-eliminating-anti-blackness}}
+
+Faculty at CSU Chico strive to create an environment that supports
+meaningful dialogue grounded in research, academic inquiry, and mutually
+respectful relations. We also strive to remain conscious of and
+attentive to the damage that anti-Blackness does to the lives of our
+students, faculty, staff, administrators, and their related communities.
+As such, faculty at CSU Chico denounce anti-Blackness and racial
+violence in all forms and stand in solidarity with Black communities in
+the fight for racial justice, equality, and equity. We pledge to remake
+our institution as one that values, honors, and supports Black lives. We
+recognize the impact of anti-Blackness on our students, and we invite
+them to dialogue with their professors as we work to make our classrooms
+anti-racist and dignity-affirming spaces.
+
+\hypertarget{lgbtq-equality-statement}{%
+\subsection{LGBTQ Equality Statement}\label{lgbtq-equality-statement}}
+
+I am firmly committed to diversity and equality in all areas of campus
+life, including specifically members of the LGBTQ community. In this
+class I will work to promote an anti-discriminatory environment where
+everyone feels safe and welcome. I recognize that discrimination can be
+direct or indirect and take place at both institutional and personal
+levels. I believe that such discrimination is unacceptable and I am
+committed to providing equality of opportunity for all by eliminating
+any and all discrimination, harassment, bullying, or victimization. The
+success of this policy relies on the support and understanding of
+everyone in this class. We all have a responsibility not to be offensive
+to each other, or to participate in, or condone harassment or
+discrimination of any kind.
+
+\hypertarget{mental-health}{%
+\subsection{Mental health}\label{mental-health}}
+
+Being a university student is stressful and can negatively impact mental
+health. The Counseling Center offers free counseling services to
+regularly enrolled students at California State University, Chico. There
+are a wide variety of reasons students come to counseling:
+
+\begin{itemize}
+\tightlist
+\item
+  Resolving personal problems or conflicts
+\item
+  Seeking clarification and support in making important life decisions
+\item
+  Experiencing an emotional crisis due to a traumatic incident or a
+  series of incidents
+\item
+  Help in developing personal survival skills necessary to achieve
+  personal goals.
+\end{itemize}
+
+\hypertarget{other-course-policies}{%
+\section{Other Course Policies}\label{other-course-policies}}
 
 \begin{itemize}
 \item
@@ -757,58 +893,134 @@ demonstrate these basic principles in their communications.}
   \item
     Asking to be excused from rules that all classmates are following.
   \item
-    Inappropriate or disruptive behavior will not be tolerated. If this
-    behavior persists, the student will be reported to the Dean's
-    Office.
+    \textbf{Inappropriate or disruptive behavior will not be tolerated.
+    If this behavior persists, the student will be reported to the
+    Dean's Office.}
   \end{enumerate}
+\item
+  As mentioned in the \protect\hyperlink{writing_assignments}{``Three
+  (3) Writing Assignments'' section} above, all papers must be 12-point
+  Times New Roman font (or 11-point Arial font), double-spaced, and have
+  1'' margins. Students' names are to be in the upper right hand corner
+  with the date and student ID number included; also, include page
+  numbers in the bottom right hand corner of the paper. Excessive
+  spacing beyond this identification will result in the deduction of
+  points. Finally, follow APA citation style, and give full references.
+  For help with formatting citations and bibliographies, visit the
+  ``Citing Sources'' page in Meriam Library's website:
+  \url{https://libguides.csuchico.edu/cite}
+\item
+  When there is evidence that a student has committed plagiary, copied
+  the work of others, allowed others to copy their work, cheated on a
+  quiz, altered class material or scores, or has inappropriate
+  possession of quizzes, or sensitive material, the incident will be
+  investigated by Student Judicial Affairs. \textbf{The consequences for
+  academic dishonesty are severe, including receiving an ``F'' in the
+  course. No exceptions.}
+\item
+  All written work will be assessed on content, depth, logic, and
+  quality of written expression.
+\item
+  Students are responsible for handling the necessary paperwork for
+  adding or dropping this class. If a student does not withdraw, and
+  does not attend class or complete required work, an ``F'' or ``WU''
+  will be reported for the final grade. Instructors may drop a student
+  who does not attend the first two classes.
 \end{itemize}
 
-\newpage
+\hypertarget{university-policies-and-campus-resources}{%
+\section{University Policies and Campus
+Resources}\label{university-policies-and-campus-resources}}
 
-\hypertarget{campus-resources}{%
-\section{Campus resources}\label{campus-resources}}
+\hypertarget{academic-integrity}{%
+\subsection{Academic Integrity}\label{academic-integrity}}
+
+Academic honesty and integrity are core values in this class and at
+Chico State. Acts of plagiarism, dishonesty, and misrepresentation of
+work are just a few examples of inappropriate behavior in this class.
+Breeches in academic honesty and integrity will be submitted to the
+Office of Student Conduct, Rights and Responsibilities for sanction.
+Additionally, breaches in academic honesty will result in a failing
+grade for the assignment to which the breach was committed, or, at the
+discretion of the instructor, a failing grade for the course. For more
+information about academic honesty and integrity, please visit
+\url{http://www.csuchico.edu/prs/EMs/2004/04-036.shtml}.
+
+\hypertarget{student-services}{%
+\subsection{Student Services}\label{student-services}}
+
+Student services are designed to assist students in the development of
+their full academic potential and to motivate them to become
+self-directed learners. Students can find support for services such as
+skills assessment, individual or group tutorials, subject advising,
+learning assistance, summer academic preparation and basic skills
+development. Student services information can be found on the current
+students page of the \href{https://www.csuchico.edu/sa/}{CSU Chico web
+site}.
+
+\hypertarget{student-learning-center}{%
+\subsection{Student Learning Center}\label{student-learning-center}}
+
+The mission of the Student Learning Center (SLC) is to provide services
+that will assist CSU, Chico students to become independent learners. The
+SLC prepares and supports students in their college course work by
+offering a variety of programs and resources to meet student needs. The
+SLC facilitates the academic transition and retention of students from
+high schools and community colleges by providing study strategy
+information, content subject tutoring, and supplemental instruction. I
+suggest you visit the \href{https://www.csuchico.edu/slc/}{Student
+Learning Center web site}.
 
 \hypertarget{writing-center}{%
-\subsection{Writing center}\label{writing-center}}
+\subsection{Writing Center}\label{writing-center}}
 
 Over the course of this semester, seek help at the Writing Center if you
 would like additional guidance and critique. You can access the Writing
 Center at
-\href{https://www.southalabama.edu/departments/academicsuccess/cae/how.it.works.html}{at
-their website}. During graduate school, I found workshops and writing
-groups at the Writing Center on campus to be helpful in building my
-motivation and teaching me new strategies for writing efficiently.
+\href{https://www.csuchico.edu/slc/writing-center/index.shtml}{at their
+website}. During graduate school, I found workshops and writing groups
+at the Writing Center on campus to be helpful in building my motivation
+and teaching me new strategies for writing efficiently. While it is not
+a requirement, I nevertheless urge you to meet with a writing tutor to
+review a writing assignment at least once during the semester.
 
-\hypertarget{disabilities}{%
-\subsection{Disabilities}\label{disabilities}}
+\hypertarget{americans-with-disabilities-act}{%
+\subsection{Americans with Disabilities
+Act}\label{americans-with-disabilities-act}}
 
-In accordance with the Americans with Disabilities Act, students with
-bona fide disabilities will be afforded reasonable accommodations. The
-Office of Special Student Services (OSSS) will certify a disability and
-advise faculty members of reasonable accommodations. If you have a
-specific disability that qualifies you for academic accommodations,
-please notify the instructor/professor and provide certification from
-the Office of Special Student Services. OSSS is located at 5828 Old
-Shell Road at Jaguar Drive, (251-460-7212).
+If you need course adaptations or accommodations because of a disability
+or chronic illness, or if you need to make special arrangements in case
+the building must be evacuated, please make an appointment with me as
+soon as possible, or see me during office hours. Please also contact
+Accessibility Resource Center (ARC) as they are the designated
+department responsible for approving and coordinating reasonable
+accommodations and services for students with disabilities. ARC will
+help you understand your rights and responsibilities under the Americans
+with Disabilities Act and provide you further assistance with requesting
+and arranging accommodations. See contact info below:
+
+\begin{quote}
+\textbf{Accessibility Resource Center}\\
+Student Services Center 170\\
+530-898-5959\\
+\href{mailto:arcdept@csuchico.edu}{\nolinkurl{arcdept@csuchico.edu}}\\
+\url{https://www.csuchico.edu/arc/}
+\end{quote}
 
 \hypertarget{food-insecurity}{%
 \subsection{Food insecurity}\label{food-insecurity}}
 
-If you are subject to food insecurity, JagPantry provides a food for
-students needing assistance. More information can be found
-\href{https://www.southalabama.edu/departments/sga/foodpantry.html}{on
-their website}
-
-\hypertarget{mental-health}{%
-\subsection{Mental health}\label{mental-health}}
-
-Being a university student is stressful and can negatively impact mental
-health. The University Counseling and Testing Center provides
-confidential, free counseling and crisis intervention services to
-eligible USA students and consultation and outreach services to members
-of the USA community. More information can be found
-\href{https://www.southalabama.edu/departments/counseling/}{at their
-website}.
+CSU Chico recognizes food and housing insecurity as a concern for many
+people. Students who have difficulty securing adequate food or housing
+have long and short term resources available at Chico State. Students
+are encouraged to contact the
+\href{https://www.csuchico.edu/chc/}{Center for Healthy Communities} or
+530-898-5323 for assistance in applying for CalFresh benefits for long
+term assistance with food access. For emergency food supplies, CalFresh
+application help, and emergency housing information, students are
+encouraged to visit the
+\href{https://www.csuchico.edu/basic-needs/pantry.shtml}{Wildcat Food
+Pantry}.
 
 \hypertarget{final-thoughts}{%
 \section{Final thoughts}\label{final-thoughts}}
@@ -822,7 +1034,7 @@ know or if you want to check your knowledge about something you think
 you know.
 
 \textbf{If this document is updated, a copy will be supplied to you via
-Blackboard and changes will be announced in class.}
+Black Board and changes will be announced in class.}
 
 \newpage
 
